--- a/src/components/Card/Card-Style.css
+++ b/src/components/Card/Card-Style.css
@@ -1,7 +1,8 @@
 .card-container {
-    width: 300px;
+    width: 250px;
     height: auto;
     padding: 15px;
+    margin-top: 4em;
 }
 .photo-container {
     width: 200px;
@@ -13,6 +14,7 @@
 }
 .photo-container > img {
     width: 100%;
+    height: 100%;
     margin: auto;
-    overflow: hidden;
+    border-radius: 50%;
 }
