--- a/src/components/Card/Card-Style.css
+++ b/src/components/Card/Card-Style.css
@@ -3,6 +3,7 @@
   height: auto;
   padding: 15px;
   margin-top: 4em;
+  box-shadow: 2px 2px 10px grey;
 }
 .photo-container {
   width: 200px;
@@ -16,4 +17,38 @@
   height: 100%;
   margin: auto;
   border-radius: 50%;
+}
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.tag {
+  padding: 4px;
+  font-size: 14px;
+  border-radius: 10px;
+  color: white;
+  height: auto;
+}
+.arrow {
+  font-size: 20px;
+  color: white;
+}
+
+.card-content {
+  width: 80%;
+  position: relative;
+  left: -5px;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  padding: 10px;
+  border-radius: 15px;
+  transform: rotate(-5deg);
+  margin-bottom: 15px;
+  margin-top: 15px;
+  color: white;
+}
+
+.description {
+  transform: rotate(5deg);
 }
