--- a/src/components/Card/Card-Style.css
+++ b/src/components/Card/Card-Style.css
@@ -4,6 +4,9 @@
   padding: 15px;
   margin-top: 4em;
   box-shadow: 2px 2px 10px grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 .photo-container {
   width: 200px;
