--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -31,8 +31,9 @@
   width: 50px;
   height: 50px;
   margin: auto;
-  border: 10px dotted green;
-  /* border-top: 10px solid white; */
+  border: 10px solid #c5c5c5;
+  border-right: 10px dotted green;
+  border-bottom: 10px dotted green;
   border-radius: 100%;
-  animation: ease rotate 3s infinite;
+  animation: rotate 3s linear infinite;
 }
